[gd_scene load_steps=10 format=3 uid="uid://8r0sfltiltyg"]

[ext_resource type="Texture2D" uid="uid://c32qe801ka5ug" path="res://assets/OrePiles.png" id="1_0m2uo"]
[ext_resource type="Script" path="res://SupportScripts/dropped_item.gd" id="1_dwcog"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2h76b"]
radius = 0.5
height = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_51wfu"]
atlas = ExtResource("1_0m2uo")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2pvt"]
atlas = ExtResource("1_0m2uo")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fidh0"]
atlas = ExtResource("1_0m2uo")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qj86k"]
atlas = ExtResource("1_0m2uo")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_8pkas"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_51wfu")
}],
"loop": true,
"name": &"COAL",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2pvt")
}],
"loop": true,
"name": &"COPPER",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fidh0")
}],
"loop": true,
"name": &"IRON",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qj86k")
}],
"loop": true,
"name": &"MAGNESIUM",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ddhv5"]
radius = 14.0
height = 54.0

[node name="DroppedItem" type="RigidBody2D"]
script = ExtResource("1_dwcog")

[node name="ItemShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_2h76b")

[node name="PileShape" type="AnimatedSprite2D" parent="."]
position = Vector2(3, -32)
sprite_frames = SubResource("SpriteFrames_8pkas")
animation = &"MAGNESIUM"

[node name="CollectionArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectionArea"]
position = Vector2(0, -12)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ddhv5")

[node name="ColorRect" type="ColorRect" parent="CollectionArea/CollisionShape2D"]
visible = false
offset_left = -15.0
offset_top = -27.0
offset_right = 13.0
offset_bottom = 28.0
color = Color(1, 1, 1, 0.509804)

[connection signal="body_entered" from="CollectionArea" to="." method="_on_collection_area_body_entered"]
